# claude-code-hook-test

./: .coderabbit.yaml  .gitignore  .markdownlint-cli2.jsonc  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pr-monitor-config.toml  push-runner-config.toml  tsconfig.json
.claude/: custom-lint-rules.toml  debug-hook.py  hookify.block-dangerous-rm.local.md  hookify.block-git.local.md  hooks-config.toml  post-py-lint.sh  post-ts-lint.sh  settings.json  settings.local.json  settings.local.json.debug  settings.local.json.example  settings.local.json.template  validate-command.js  validate-command.py  weekly-review-deferred.json  weekly-review-last-run.json
.claude/check-ci-coderabbit/: Cargo.toml
.claude/hooks-linter/: Cargo.toml
.claude/hooks-post-pr-monitor/: Cargo.toml
.claude/hooks-post-tool-linter/: Cargo.toml
.claude/hooks-pre-tool-validate/: Cargo.toml
.claude/hooks-push-pipeline/: Cargo.toml
.claude/hooks-rs/: Cargo.toml
.takt/: .gitignore
docs/: auto-push-gate-dogfood.md  bundle-history.md  claude-code-web-tasks.md  coderabbit-monitoring-efficiency.md  dev-conventions.md  docs-pr-iteration-efficiency.md  file-length-enforcement-plan.md  handoff-rank-8-weekly-review-phase-b.md  handoff-weekly-review-phase-c-onwards.md  harness-improvement-plan.md  local-llm-offload-analysis.md  local-llm-offload-history.md  local-llm-offload-phase-d-guide.md  local-llm-offload-phase-d-outcomes.md  pipeline-token-efficiency.md  push-pipeline-fix-plan.md  push-pipeline-fix-plan2.md  stop-tool-call-leak-plan.md  takt-step-timings.md  todo-summary.md  todo-summary2.md  todo.md  todo10.md  todo11.md  todo12.md  todo13.md  todo14.md  todo15.md  todo16.md  todo17.md  todo18.md  todo19.md  todo2.md  todo3.md  todo4.md  todo5.md  todo6.md  todo7.md  todo8.md  todo9.md  (+1 more)
scripts/: analyze-takt-timings.ps1  build-hooks-settings.mjs  cloud-setup.sh  deploy-artifacts.mjs  deploy-hooks.js  deploy-hooks.ts  deploy-targets.template.json  e2e.mjs  e2e.ts  fix-metrics-check.ps1  prepare-pr-body.ps1  run-artifact.mjs
src/: logger.ts  sample.py  sample.ts
src/cli-finding-classifier/: Cargo.toml
src/cli-finding-classifier/evals/: lint-screen-evals.json
src/cli-finding-classifier/evals/files/: eval1-unused-import.diff  eval10-nesting-boundary.diff  eval11-comment-only.diff  eval12-test-cfg.diff  eval13-large-refactor-real.diff  eval14-mid-mixed.diff  eval15-syntax-stress.diff  eval2-deep-nesting.diff  eval3-magic-number.diff  eval4-clean.diff  eval5-multi-issue.diff  eval6-existing-lint-overlap.diff  eval7-style-only.diff  eval8-large-refactor.diff  eval9-multi-import-leak.diff
src/cli-finding-classifier/prompts/: classify.txt  lint-screen.txt
src/cli-finding-classifier/src/: lib.rs  main.rs
src/cli-finding-classifier/tests/: lint_screen_evals.rs
src/cli-finding-classifier/tests/lint_screen_evals/: e2e.rs  main.rs
src/cli-merge-pipeline/: Cargo.toml
src/cli-merge-pipeline/src/: config.rs  feedback.rs  github.rs  main.rs  pending_file.rs  pipeline.rs
src/cli-merge-pipeline/src/feedback/: context.rs  markers.rs  mod.rs  pr_metadata.rs  takt.rs  transcript.rs
src/cli-pr-monitor/: Cargo.toml
src/cli-pr-monitor/src/: classifier_runner.rs  config.rs  fix_commit.rs  lock.rs  log.rs  main.rs  prepare_pr_body.rs  runner.rs  state.rs  util.rs
src/cli-pr-monitor/src/fix_commit/: abandon.rs  description.rs  mod.rs  sweep.rs
src/cli-pr-monitor/src/stages/: collect.rs  create_pr.rs  daemon.rs  gate.rs  mark_notified.rs  mod.rs  monitor.rs  observe.rs  poll.rs  push.rs  push_jj_bookmark.rs  repush.rs  review_trigger.rs  scope_guard.rs  takt.rs
src/cli-pr-monitor/src/stages/poll/: iteration.rs  mod.rs  rate_limit.rs  rate_limit_signal.rs  review_recheck.rs  review_recheck_signal.rs
src/cli-push-runner/: Cargo.toml
src/cli-push-runner/src/: config.rs  log.rs  main.rs  metrics.rs  runner.rs
src/cli-push-runner/src/config/: docs_only_routing.rs  lint_screen.rs  mod.rs  post_takt_regate.rs  pr_size_check.rs  scratch_file_warning.rs  tests.rs
src/cli-push-runner/src/stages/: bookmark_check.rs  diff.rs  docs_only_routing.rs  lint_screen.rs  mod.rs  post_takt_regate.rs  pr_size_check.rs  push.rs  push_jj_bookmark.rs  quality_gate.rs  scratch_file_warning.rs  takt.rs
src/cli-push-runner/src/stages/diff/: tests.rs
src/cli-push-runner/src/stages/lint_screen/: classifier.rs  diff_filter.rs  mod.rs  report.rs
src/hooks-post-tool-comment-lint-rust/: Cargo.toml
src/hooks-post-tool-comment-lint-rust/src/: comment_lint.rs  file_length.rs  fix_metrics_check.rs  function_length.rs  line_filter.rs  main.rs  metrics.rs  modified_files_check.rs  violations.rs
src/hooks-post-tool-linter/: Cargo.toml
src/hooks-post-tool-linter/src/: config.rs  file_size_check.rs  main.rs  pipeline_runner.rs  utf8_integrity.rs  violation.rs
src/hooks-post-tool-linter/src/custom_rules/: coverage.rs  deployed_tests.rs  engine.rs  engine_tests.rs  mod.rs  rule_tests.rs  rule_tests_extras.rs  types.rs
src/hooks-post-tool-linter/tests/: incident_eval.rs
src/hooks-pre-tool-validate/: Cargo.toml
src/hooks-pre-tool-validate/src/: blocked_patterns.rs  config.rs  handlers.rs  main.rs  protected_files.rs  todo_staleness.rs
src/hooks-pre-tool-validate/src/presets/: basic.rs  gh.rs  jj.rs  mod.rs
src/hooks-pre-tool-validate/src/presets/safety/: mod.rs  polling_exe.rs  powershell.rs  secret.rs
src/hooks-stop-quality/: Cargo.toml
src/hooks-stop-quality/src/: main.rs  takt_subsession.rs
src/hooks-stop-quality/tests/: t3_build_gate_seal.rs  t7_cwd_independence.rs
src/hooks-stop-tool-call-leak/: Cargo.toml
src/hooks-stop-tool-call-leak/src/: detect.rs  main.rs  transcript.rs
src/hooks-stop-tool-call-leak/tests/: e2e.rs
src/lib-docs-policy/: Cargo.toml
src/lib-docs-policy/src/: lib.rs
src/lib-ollama-client/: Cargo.toml
src/lib-ollama-client/src/: error.rs  lib.rs
src/lib-telemetry/: Cargo.toml
src/lib-telemetry/src/: lib.rs
templates/: hooks-config-python.toml  hooks-config-typescript.toml  pr-monitor-config.toml  push-runner-config.toml
tests/: test_sample.py
(+176 files in other folders)
