[package]
name = "cli-finding-classifier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli-finding-classifier"
path = "src/main.rs"

[lib]
name = "cli_finding_classifier"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lib-ollama-client = { path = "../lib-ollama-client" }
lib-report-formatter = { path = "../lib-report-formatter" }

[dev-dependencies]
tempfile = "3"
