[package]
name = "cli-push-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
lib-docs-policy = { path = "../lib-docs-policy" }
lib-jj-helpers = { path = "../lib-jj-helpers" }
lib-subprocess = { path = "../lib-subprocess" }
lib-telemetry = { path = "../lib-telemetry" }

[dev-dependencies]
tempfile = "3"

# [profile.release] は workspace root (Cargo.toml) に集約 (ADR-026)
