[package]
name = "hooks-post-tool-linter"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
# globset: paths filter (順位 102、PR #140 T1-#2 採用) for CustomRule
# BurntSushi-maintained, ripgrep の依存。`**/` 形式の recursive 対応が標準で揃う。
globset = "0.4"
lib-subprocess = { path = "../lib-subprocess" }

[dev-dependencies]
tempfile = "3"
# serde_json: WP-08 incident-eval E2E test (tests/incident_eval.rs) parses the hook's
# stdout HookOutput/LintViolation JSON. serde_json is also a [dependencies] entry but
# integration tests only see [dev-dependencies], so it is re-declared here.
serde_json = "1.0"

# [profile.release] は workspace root (Cargo.toml) に集約 (ADR-026)
