[package]
name = "hooks-pre-tool-validate"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
toml = "0.8"
lib-subprocess = { path = "../lib-subprocess" }
lib-telemetry = { path = "../lib-telemetry" }

# [profile.release] は workspace root (Cargo.toml) に集約 (ADR-026)
