[package]
name = "hooks-stop-tool-call-leak"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
# serde_json / lib-subprocess: exe-spawn E2E test (tests/e2e.rs) 用。
# integration tests は [dev-dependencies] のみ参照するため再宣言する
# (hooks-post-tool-linter の incident_eval と同 pattern)。
serde_json = "1.0"
lib-subprocess = { path = "../lib-subprocess" }

# [profile.release] は workspace root (Cargo.toml) に集約 (ADR-026)
