[package]
name = "lib-ollama-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib_ollama_client"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ureq = { version = "2.10", features = ["json"] }

[dev-dependencies]
mockito = "1"
