[package]
name = "lib-telemetry"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib_telemetry"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

# [profile.release] は workspace root (Cargo.toml) に集約 (ADR-026)
